/*
 * Copyright (C) 2018 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";
option optimize_for = LITE_RUNTIME;

import "perfetto/processed_trace/query.proto";

package perfetto.protos;

service sched {
  rpc GetSchedEvents(Query) returns (stream SchedEvent) {}
  rpc GetQuantizedSched(Query) returns (stream QuantizedSchedActivity) {}
}

message SchedEvent {
  optional int32 pid = 1;
  optional int32 tid = 2;
  optional string process_name = 3;
  optional string thread_name = 4;
  optional double timestamp = 5;
  optional double duration = 6;
  optional double cycles = 7;

  enum SchedReason {
    PREEMPTED = 1;
    BLOCKED_ON_IO = 2;
  };
  optional SchedReason reason = 8;
}

message QuantizedSchedActivity {
  optional double timestamp = 1;
  optional double duration = 2;
  repeated SchedEvent events = 3;
}
